@@ -1,3 +1,8 @@
+2006-11-03  Akim Demaille  <akim.demaille@free.fr>
+
+	Adjust to the new location of jconfig.doc
+	* Makefile.am: here.
+
 2006-10-31  Akim Demaille  <demaille@gostai.com>
 
 	Check PROTOTYPES, not HAVE_PROTOTYPES
